Make the shade interface asynchronous. Add "Raising" and "Lowering" states to shade controls and web views.

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -165,6 +165,14 @@ td {
 	color: #FFFF66;
     }
 
+.shade_Lowering {
+	color: #CCCC66;
+    }
+
+.shade_Raising {
+	color: #CCCC66;
+    }
+
 .light_Off {
 	color: SlateGray;
     }
