--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -2,9 +2,10 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' href='css/ipad.css'> 
     <script src='js/jquery.js'></script>
+    <script src='js/update.js'></script>
+    <script src='js/submit.js'></script>
     {{ script }}
 </head>
 <body>
