--- a/templates/iphone3gs.html
+++ b/templates/iphone3gs.html
@@ -2,13 +2,10 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
     <link rel='stylesheet' type='text/css' href='css/iphone3gs.css'> 
     <script src='js/jquery.js'></script>
+    <script src='js/update.js'></script>
+    <script src='js/submit.js'></script>
     {{ script }}
 </head>
 <body>
