--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -2,6 +2,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' href='css/ipad.css'> 
     <script src='js/jquery.js'></script>
     <script src='js/update.js'></script>
@@ -10,7 +11,7 @@
 </head>
 <body>
     <table border=0 width=1024 style='table-layout:fixed'>
-        <col width=62><col width=58><col width=798><col width=78>
+        <col width=62><col width=58><col width=814><col width=78>
         <tr>
             <td><div id="{{ time.name }}" class="time">{{ time.getViewState() }}</div></td>
             <td><div id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState() }}</div></td>
