--- a/static/css/default.css
+++ b/static/css/default.css
@@ -164,11 +164,11 @@ td {
     }
 
 .dimmer_25 {
-	color: #66661F;
+	color: #88881F;
     }
 
 .dimmer_50 {
-	color: #99993F;
+	color: #AAAA3F;
     }
 
 .dimmer_75 {
@@ -184,7 +184,7 @@ td {
     }
 
 .nightLight_Sleep {
-	color: #66661F;
+	color: #88881F;
     }
 
 .nightLight_On {
