--- a/static/css/iphone3gs.css
+++ b/static/css/iphone3gs.css
@@ -5,45 +5,63 @@ body {
     }
 
 * {
-    font-size: 18px;
+    font-size: 20px;
+    text-align: left;
+	margin-left: 6px;
+    padding: 0px 0px 0px 0px;
     }
     
 .time {
 	color: LightYellow;
-	font-size: 108px;
+	font-size: 120px;
+	line-height: 90%;
 	text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
+	margin-left: 0px;
     }
 
 .ampm {
 	color: LightYellow;
 	font-size: 12px;
+	margin-left: 0px;
     }
 
 .date {
 	color: LightGray;
-	font-size: 18px;
+	font-size: 24px;
 	text-align: left;
 	margin-left: 12px;
+	margin-left: 0px;
     }
 
 .tempF {
 	color: LightYellow;
-	font-size: 28px;
+	font-size: 30px;
 	text-align: right;
+	margin-left: 0px;
     }
 
 .label {
-    font-size: 18px;
+    font-size: 20px;
+    padding: 0px 0px 0px 0px;
     }
-
+    
+.control {
+	margin-left: 0px;
+    }
+    
+table {
+	margin-left: 0px;
+    }
+    
 input {
-    height: 40px;
-    width: 60px;
-	font-size: 20px;
+    height: 50px;
+    width: 80px;
+	font-size: 24px;
     margin-top: 4px;
     margin-bottom: 4px;
+	margin-left: 0px;
     }
 
 
