--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #424242;
+    background-color: #000 !important;
     }
 
 * {
-	color: LightGray;
-	font-size: 14px;
+	color: LightBlue;
+	font-size: 1.2 em;
 	font-weight: bold;
-	font-family: "Helvetica", Helvetica, sans-serif;
+	font-family: "Lato", Helvetica, sans-serif;
 	text-align: left;
 	text-indent: 0px;
 	padding: 2 2 2 2;
@@ -17,7 +17,7 @@ h1 {
 	color: OrangeRed;
 	font-size: 32px;
     text-align: left;
-    font-weight: bold;
+    font-weight: bold; em
     }
 
 h2 {
@@ -28,15 +28,10 @@ h2 {
     }
 
 input {
-    height: 16px;
-    width: 40px;
 	background-color: LightGray;
-	color: Black;
-	font-size: 12px;
+	color: Black !important;
+	font-size: 1.2em;
 	text-align: center;
-	margin: 2 2 2 2;
-	padding: 0 0 0 0;
-	text-indent: 0px;
     }
 
 form {
@@ -51,7 +46,7 @@ td {
     }
 
 .navtext {
-	color: Black;
+	color: #000;
 	font-weight: bold;
 	font-family: "Helvetica", Helvetica, sans-serif;
 	font-size: 4vw;
@@ -59,6 +54,7 @@ td {
 
 .label {
     text-align: left;
+    font-size-adjust: : 1.2em;
     }
 
 .control {
