--- a/templates/default.html
+++ b/templates/default.html
@@ -12,18 +12,35 @@
 </head>
 <body>
     <div class=container>
-        <h1>{{ title }}</h1>
+        <table class=table>
+        <thead>
+            <h1>{{ title }}</h1>
+        </thead>
+        <tbody>
         {% for g in groups %}
-        <br>
-        <h2>{{ g[0] }}</h2>
-        <table border=0 width=1320 style='table-layout:fixed'>
-            <col width=220><col width=140><col width=280><col width=80><col width=160><col width=360><col width=80>
-            {% for r in g[1] %}
+            <!--section header-->
             <tr>
-                <td><div class=label>{{ r.label }}</div></td>
-                <td><div id="{{ r.name }}" class="{{ r.type+'_'+r.getViewState(views) }}">{{ r.getViewState(views) }}</div></td>
                 <td>
-                    {% if r.className != "HASensor" %}
+                <h2>{{ g[0] }}</h2>
+                {% for r in g[1] %}
+                </td>
+            </tr>
+            <!--end header-->
+            <!--section information-->
+             <tr>
+                <td>
+                    <div class=label>
+                        {{ r.label }}
+                    </div>
+                </td>              
+                <td>
+                    <div id="{{ r.name }}" 
+                    class="{{ r.type+'_'+r.getViewState(views) }}">
+                    {{ r.getViewState(views) }}
+                    </div>
+                </td>
+                <td>
+                {% if r.className != "HASensor" %}
                     <div class=control>
                     <form name='control' action='' method='get'>
                         <input type='hidden' name='resource' value='{{ r.name }}' />
@@ -40,17 +57,20 @@
                     </div>
                     {% endif %}
                 </td>
-                {% if details %}
+                <!--Bug troubleshooting information-->
+                 {% if details %}
                 <td><div class=data>{{ r.type }}</div></td>
                 <td><div class=data>{{ r.interface.name }}</div></td>
                 <td><div class=data>{{ r.addr }}</div></td>
                 <td><div class=data>{{ r.location }}</div></td>
                 {% endif %}
             </tr>
+            <!--end section information-->
             {% endfor %}
-        </table>
+        </tbody>
         {% endfor %}
-    </div>
+        </div>
+    </div><!--end container-->
 </body>
 </html>
 
