--- a/static/css/solar.css
+++ b/static/css/solar.css
@@ -15,8 +15,12 @@ body {
 
 .stats {
     position: absolute; 
-    top: 740px; 
+    top: 700px; 
     left: 76px;
+    }
+    
+.statsGroup {
+    margin-bottom: 12px;
     }
     
 .inverter {
@@ -31,19 +35,23 @@ body {
     }
 
 .optimizerName {
-	color: Yellow;
+	color: LimeGreen;
+    }
+
+.V {
+	color: Orange;
     }
 
 .W {
-	color: OrangeRed;
+	color: Orange;
     }
 
 .KW {
-	color: OrangeRed;
+	color: Orange;
     }
 
 .KVA {
-	color: OrangeRed;
+	color: Orange;
     }
 
 .KWh {
