--- a/static/css/solar.css
+++ b/static/css/solar.css
@@ -5,12 +5,25 @@ body {
     }
 
 * {
-	color: Yellow;
+	color: LightGray;
 	font-size: 12px;
     }
 
 .label {
 	color: LightGray;
+    }
+
+.date {
+    font-size: 24px;
+    text-align: left;
+    }
+
+.summary {
+    text-align: right;
+    }
+
+.caption {
+	text-align: center;
     }
 
 .stats {
