--- a/templates/tacoma.html
+++ b/templates/tacoma.html
@@ -2,7 +2,6 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' href='css/tacoma.css'> 
     <script src='js/jquery.js'></script>
     <script src='js/update.js'></script>
@@ -10,16 +9,52 @@
     {{ script }}
 </head>
 <body>
-    <h1>{{ title }}</h1>
-    <table border=0 width=800 style='table-layout:fixed'>
-        <col width=360><col width=440>
-        {% for r in group %}
-        <tr>
-            <td><div class=label>{{ r.label }}</div></td>
-            <td><div id="{{ r.name }}" class="{{ r.type+'_'+r.getViewState(views) }}">{{ r.getViewState(views) }}</div></td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="lcd">
+        <table border=0 width=800 style='table-layout:fixed'>
+            <col width=320><col width=480>
+            <tr>
+                <td>
+                <span id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</span>
+                <span id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</span>
+                </td>
+                <td>
+                <span id="{{ temp.name }}" class="tempF">{{ temp.getViewState(views) }}</span>
+                </td>
+            </tr>
+            {% for r in group %}
+            <tr>
+                <td><div class=label>{{ r.label }}</div></td>
+                <td><div id="{{ r.name }}" class="{{ r.type+'_'+r.getViewState(views) }}">{{ r.getViewState(views) }}</div></td>
+            </tr>
+            {% endfor %}
+        </table>
+        <table border=0 width=800 style='table-layout:fixed'>
+            <col width=80><col width=160><col width=80><col width=80><col width=80><col width=80><col width=80><col width=80><col width=80>
+            <tr>
+                {% for r in controls %}
+                <td>
+                    <div class=label>
+                        {{ r.label }}
+                    </div>
+                </td>
+                 <td>
+                    <div class=control>
+                        <form name='control' action='' method='get'>
+                            <input type='hidden' name='resource' value='{{ r.name }}' />
+                            {% if views[r.type].toggle %}
+                                <input type='submit' class='button' id="{{ r.name }}" name='action' value='{{ r.getViewState(views) }}' />
+                            {% else %}
+                                {% for v in r.setValues(views).values() %}
+                                <input type='submit' class='button' name='action' value='{{ v }}' />
+                                {% endfor %}
+                            {% endif %}
+                        </form>
+                    </div>
+                </td>
+               {% endfor %}
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
 
