--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -3,10 +3,10 @@
 <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='css/ipad.css'> 
-    <script src='js/jquery.js'></script>
-    <script src='js/update.js'></script>
-    <script src='js/submit.js'></script>
+    <link rel='stylesheet' type='text/css' href='/css/ipad.css'> 
+    <script src='/js/jquery.js'></script>
+    <script src='/js/update.js'></script>
+    <script src='/js/submit.js'></script>
     {{ script }}
 </head>
 <body>
