--- a/templates/iphone5.html
+++ b/templates/iphone5.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-    <link rel='stylesheet' type='text/css' href='css/iphone5.css'> 
-    <script src='js/jquery.js'></script>
-    <script src='js/update.js'></script>
-    <script src='js/submit.js'></script>
+    <link rel='stylesheet' type='text/css' href='/css/iphone5.css'> 
+    <script src='/js/jquery.js'></script>
+    <script src='/js/update.js'></script>
+    <script src='/js/submit.js'></script>
     {{ script }}
 </head>
 <body>
