--- a/templates/solar.html
+++ b/templates/solar.html
@@ -3,15 +3,15 @@
 <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='css/solar.css'> 
-    <script src='js/jquery.js'></script>
-    <script src='js/update.js'></script>
-    <script src='js/submit.js'></script>
+    <link rel='stylesheet' type='text/css' href='/css/solar.css'> 
+    <script src='/js/jquery.js'></script>
+    <script src='/js/update.js'></script>
+    <script src='/js/submit.js'></script>
     {{ script }}
 </head>
 <body>
     <div class="image">
-       <img src="images/solar.png" />
+       <img src="/images/solar.png" />
             <div class="stats" >
                 <div class="statsGroup">
                     <div>
