--- a/templates/tacoma.html
+++ b/templates/tacoma.html
@@ -2,10 +2,10 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <link rel='stylesheet' type='text/css' href='css/tacoma.css'> 
-    <script src='js/jquery.js'></script>
-    <script src='js/update.js'></script>
-    <script src='js/submit.js'></script>
+    <link rel='stylesheet' type='text/css' href='/css/tacoma.css'> 
+    <script src='/js/jquery.js'></script>
+    <script src='/js/update.js'></script>
+    <script src='/js/submit.js'></script>
     {{ script }}
 </head>
 <body>
@@ -35,6 +35,9 @@
                 <td>
                     <div class=label>
                         {{ r.label }}
+                    </div>
+                    <div id="{{ r.name }}" class="{{ r.type+'_'+r.getViewState(views) }}">
+                        {{ r.getViewState(views) }}
                     </div>
                 </td>
                  <td>
