--- a/templates/details.html
+++ b/templates/details.html
@@ -2,7 +2,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <link rel='stylesheet' type='text/css' href='/css/default.css'> 
+    <link rel='stylesheet' type='text/css' href='/css/details.css'> 
     <script src='/js/jquery.js'></script>
     <script src='/js/update.js'></script>
     <script src='/js/submit.js'></script>
