group and resource templates

--- a/templates/resource.html
+++ b/templates/resource.html
@@ -19,6 +19,7 @@
             {% endif %}
         </td>
         {% if details %}
+        <td><div class=data>{{ resource.name }}</div></td>
         <td><div class=data>{{ resource.type }}</div></td>
         <td><div class=data>{{ resource.interface.name }}</div></td>
         <td><div class=data>{{ resource.addr }}</div></td>
