--- a/templates/group.html
+++ b/templates/group.html
@@ -1,7 +1,7 @@
     <h2>{{ group[0] }}</h2>
     {% if details %}
     <table border=0 width=1280 style='table-layout:fixed'>
-        <col width=180><col width=180><col width=280><col width=80><col width=160><col width=320><col width=80>
+        <col width=180><col width=180><col width=280><col width=120><col width=100><col width=120><col width=240><col width=60>
     {% else %}
     <table border=0 width=640 style='table-layout:fixed'>
         <col width=180><col width=180><col width=280>
