--- a/static/css/base.css
+++ b/static/css/base.css
@@ -128,11 +128,11 @@ td {
 	color: Lime;
     }
 
-.scene_Off {
+.controlGroup_Off {
 	color: SlateGray;
     }
 
-.scene_On {
+.controlGroup_On {
 	color: Lime;
     }
 
