--- a/static/css/iphone3gs.css
+++ b/static/css/iphone3gs.css
@@ -12,7 +12,8 @@ body {
     }
     
 .time {
-	color: #efefd0;
+	color: LightYellow;
+    opacity: 0.5;
 	font-size: 120px;
 	line-height: 90%;
 	text-align: center;
@@ -22,13 +23,15 @@ body {
     }
 
 .ampm {
-	color: #efefd0;
+	color: LightYellow;
+    opacity: 0.5;
 	font-size: 12px;
 	margin-left: 0px;
     }
 
 .date {
-	color: LightGray;
+    color: LightGray;
+    opacity: 0.5;
 	font-size: 24px;
 	text-align: left;
 	margin-left: 12px;
@@ -36,7 +39,7 @@ body {
     }
 
 .tempF {
-	color: #efefd0;
+    opacity: 0.5;
 	font-size: 30px;
 	text-align: right;
 	margin-left: 0px;
@@ -44,6 +47,7 @@ body {
 
 .label {
     color: LightGray;
+    opacity: 0.5;
     font-size: 20px;
     padding: 0px 0px 0px 0px;
     }
@@ -56,21 +60,54 @@ body {
 	margin-left: 0px;
     }
     
+.light_Off {
+    opacity: 0.5;
+    }
+
+.light_On {
+    opacity: 0.5;
+    }
+
+.nightLight_Off {
+    opacity: 0.5;
+    }
+
+.nightLight_Sleep {
+    opacity: 0.5;
+    }
+
+.nightLight_On {
+    opacity: 0.5;
+    }
+
+.hotwater_Off {
+    opacity: 0.5;
+    }
+
+.hotwater_On {
+    opacity: 0.5;
+    }
+
+.door_Closed {
+    opacity: 0.5;
+    }
+
+.door_Open {
+	color: #ffcf4f;
+    }
+
 table {
 	margin-left: 0px;
     }
     
 input {
+    opacity: 0.5;
     height: 48px;
     width: 80px;
 	font-size: 24px;
     margin-top: 4px;
     margin-bottom: 4px;
 	margin-left: 0px;
-    }
-
-.door_Open {
-	color: #ffdf6f;
     }
 
 
